# eval-recipes

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SUPPORT.md  llms.txt  pyproject.toml
.claude/: settings.json
.claude/commands/: create-benchmark-task.md  create-benchmark-test.md  create-semantic-tests.md  dependency-update.md  draft-release-description.md  pre-push-check.md  prepare-release.md  prime.md
.github/workflows/: eval-job-tests.yaml  generate-ipynbs.yaml  generate-llms-txt.yaml  python-tests.yaml
data/_template_task/: instructions.txt  setup.dockerfile  test.py
data/agents/amplifier_foundation/: agent.yaml  command_template.txt  command_template_continue.txt  install.dockerfile
data/agents/amplifier_v1/: agent.yaml  command_template.txt  command_template_continue.txt  install.dockerfile
data/agents/amplifier_v2/: command_template.txt  command_template_continue.txt  install.dockerfile
data/agents/amplifier_v2_aoai/: agent.yaml  (+3 more)
data/benchmarks/: full_benchmark.yaml
data/eval-setups/: comparison-all.yaml  score-default.yaml
data/goldset/: guidance_test_1.json  guidance_test_2.json  labels.yaml  tool_calling_test_1.json  tool_calling_test_2.json  user_preferences_test_1.json  user_preferences_test_2.json
data/tasks/: test_template.py
demos/: 1_evaluate.ipynb  1_evaluate.py  2_claim_verification.ipynb  2_claim_verification.py  3_check_criteria.ipynb  3_check_criteria.py
demos/data/: Earnings Release FY24 Q4.md  Earnings Release FY25 Q4.md
docs/: BENCHMARKING.md  CHANGELOG.md  LOW_LEVEL_API.md  NOTEBOOKS.md  ROADMAP.md
eval_recipes/: evaluate.py  schemas.py
eval_recipes/benchmarking/: agent_interacter.py  aggregate_comparison_report.py  base.dockerfile  create_comparison_html_report.py  create_html_report.py  docker_manager.py  filters.py  harness.py  harness_comparison.py  loaders.py  reporting.py  run_trial.py  schemas.py  semantic_test.py  semantic_test_comparison.py  test_utils.py
eval_recipes/evaluations/: check_criteria.py  guidance_evaluator.py  tool_evaluator.py  user_preferences.py
eval_recipes/utils/: llm.py  responses_conversion.py
scripts/: create_animation.py  generate_ipynbs.py  run_benchmarks.py  run_comparison_benchmarks.py
scripts/third_party_benchmarks/: setup_arc_agi_2.py  setup_frontier_science.py
tests/: test_evaluate.py  validate_evaluations.py
tests/benchmarking/: test_agent_interacter.py  test_docker_manager.py  test_job_framework.py  test_semantic_test.py  test_semantic_test_comparison.py  test_semantic_tests.py
tests/evaluations/: test_check_criteria.py  test_guidance_evaluator.py  test_semantic_test_evaluator.py  test_tool_usage.py  test_user_preferences.py
tests/utils/: test_responses_conversion.py
(+181 files in other folders)
